--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
         </nav>
         <ul class="contact">
           <li class="main-contact">
-            <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-link" href="mailto:info@devstudio.com"
+              ><svg class="icon-contact" width="16px" height="12px">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use></svg
+              >info@devstudio.com</a
+            >
           </li>
           <li class="main-contact">
-            <a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-link" href="tel:+380961111111">
+              <svg class="icon-contact" width="10px" height="16px">
+                <use href="./images/icons.svg/symbol-defs.svg#icon-mob"></use></svg
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -58,22 +66,42 @@
           <h2 class="visually-hidden">Наші переваги</h2>
           <ul class="feature-list list">
             <li class="title-text">
+              <div class="icon-background">
+                <svg class="icon-feature" width="70px" height="70px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
               <p class="text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="title-text">
+              <div class="icon-background">
+                <svg class="icon-feature" width="70px" height="70px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
               <p class="text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="title-text">
+              <div class="icon-background">
+                <svg class="icon-feature" width="70px" height="70px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">ПЛАНУВАННЯ</h3>
               <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="title-text">
+              <div class="icon-background">
+                <svg class="icon-feature" width="70px" height="70px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -110,6 +138,32 @@
               <div class="aside">
                 <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
+                <ul class="list team-list-link">
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-text">
@@ -117,6 +171,32 @@
               <div class="aside">
                 <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
+                <ul class="list team-list-link">
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-text">
@@ -124,6 +204,32 @@
               <div class="aside">
                 <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
+                <ul class="list team-list-link">
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-text">
@@ -131,7 +237,83 @@
               <div class="aside">
                 <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
+                <ul class="list team-list-link">
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li>
+                    <a class="team-link" href=""
+                      ><svg class="team-svg" width="20" height="20">
+                        <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--постійні клієнти-->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постійні клієнти</h2>
+          <ul class="list svg-logo">
+            <li class="svg-logo-list">
+              <a class="svg-logo-link" href=""
+                ><svg class="icon-svg" width="106px" height="60px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="svg-logo-list">
+              <a class="svg-logo-link" href=""
+                ><svg class="icon-svg" width="106px" height="60px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="svg-logo-list">
+              <a class="svg-logo-link" href=""
+                ><svg class="icon-svg" width="106px" height="60px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="svg-logo-list">
+              <a class="svg-logo-link" href=""
+                ><svg class="icon-svg" width="106px" height="60px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="svg-logo-list">
+              <a class="svg-logo-link" href=""
+                ><svg class="icon-svg" width="106px" height="60px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="svg-logo-list">
+              <a class="svg-logo-link" href=""
+                ><svg class="icon-svg" width="106px" height="60px">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-logo5"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -140,28 +322,59 @@
     <!-- підвал -->
     <footer class="footer">
       <div class="container footer-container">
-        <a href="./index.html" class="logo footer-logo"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <address class="footer-list">
-          <ul class="list">
-            <li class="footer-contact-list">
-              <a
-                class="footer-link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
+        <div class="footer-logo-contact">
+          <a href="./index.html" class="logo footer-logo"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <address class="footer-list">
+            <ul class="list">
+              <li class="footer-contact-list">
+                <a
+                  class="footer-link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-contact-list">
+                <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-contact-list">
+                <a class="footer-contact" href="telto:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="social">
+          <p class="title-svg">приєднуйтесь</p>
+          <ul class="list footer-list-link">
+            <li class="list-svg">
+              <a class="footer-link-svg" href=""
+                ><svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use></svg
+              ></a>
             </li>
-            <li class="footer-contact-list">
-              <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="list-svg">
+              <a class="footer-link-svg" href=""
+                ><svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use></svg
+              ></a>
             </li>
-            <li class="footer-contact-list">
-              <a class="footer-contact" href="telto:+380961111111">+38 096 111 11 11</a>
+            <li class="list-svg">
+              <a class="footer-link-svg" href=""
+                ><svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="list-svg">
+              <a class="footer-link-svg" href=""
+                ><svg class="footer-svg" width="20" height="20">
+                  <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use></svg
+              ></a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
