--- a/portfolio.html
+++ b/portfolio.html
@@ -163,29 +163,30 @@
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-logo-contact">
-            <a href="./index.html" class="logo footer-logo"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <address class="footer-list">
-          <ul class="list">
-            <li class="footer-contact-list">
-              <a
-                class="footer-link"
-                href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-                >м. Київ, пр-т Лесі Українки, 26</a
-              >
-            </li>
-            <li class="footer-contact-list">
-              <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li class="footer-contact-list">
-              <a class="footer-contact" href="telto:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul></div>
-        
-        </address>
+          <a href="./index.html" class="logo footer-logo"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <address class="footer-list">
+            <ul class="list">
+              <li class="footer-contact-list">
+                <a
+                  class="footer-link"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li class="footer-contact-list">
+                <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="footer-contact-list">
+                <a class="footer-contact" href="telto:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
         <div>
           <p class="title-svg">приєднуйтесь</p>
           <ul class="list footer-list-link">
